# LocalAI

./: .gitignore  AGENTS.md  AI_Model_Downloads.md  CODEX_START_HERE.md  Hermes_Local_AI_Studio_Codex_Plan.md  README.md  SHA256SUMS.txt  STATUS.md  ai_model_download_manifest.json  download_ollama_baseline_models.ps1  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
apps/studio-dashboard-plugin/: package.json
apps/studio-desktop/: package.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.config.ts
docs/milestone-0/: scaffold-map.md
scripts/: detect-environment.ps1  hermes.ps1  install-studio-local.ps1  pnpm.ps1  pull-ollama-baseline-http.mjs  pull-ollama-baseline.ps1  repair-milestone0-prereqs.ps1  run-milestone0.ps1  run-milestone1.ps1  run-milestone10.ps1  run-milestone11.ps1  run-milestone12.ps1  run-milestone13.ps1  run-milestone14.ps1  run-milestone15.ps1  run-milestone16.ps1  run-milestone2.ps1  run-milestone3.ps1  run-milestone4.ps1  run-milestone5.ps1  run-milestone6.ps1  run-milestone7.ps1  run-milestone8.ps1  run-milestone9.ps1  run-post-milestone-ux1.ps1  run-post-milestone-ux10.ps1  run-post-milestone-ux11.ps1  run-post-milestone-ux12.ps1  run-post-milestone-ux13.ps1  run-post-milestone-ux14.ps1  run-post-milestone-ux15.ps1  run-post-milestone-ux16.ps1  run-post-milestone-ux17.ps1  run-post-milestone-ux18.ps1  run-post-milestone-ux19.ps1  run-post-milestone-ux2.ps1  run-post-milestone-ux20.ps1  run-post-milestone-ux21.ps1  run-post-milestone-ux22.ps1  run-post-milestone-ux23.ps1  (+100 more)
(+109 files in other folders)
