[project]
name = "hermes-local-ai-studio"
version = "0.0.0"
requires-python = ">=3.12"
description = "Milestone 0 validation scaffold for Hermes Local AI Studio."

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["services", "scripts", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
